--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".login.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity
+            android:name=".login.MainActivity"
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".coffeebag.CoffeeBagActivity"
             android:label="@string/title_activity_coffee_bag"
@@ -26,8 +22,17 @@
             android:name=".coffeebag.CoffeeBagDetailActivity"
             android:label="@string/title_activity_coffee_bag_detail"
             android:theme="@style/AppTheme" />
-        <activity android:name=".dashboard.DashboardActivity" />
-        <activity android:name=".recommendation.RecommendationSummaryActivity"></activity>
+        <activity android:name=".coffeebag.CompanyActivity" />
+        <activity android:name=".recommendation.RecommendationSummaryActivity" />
+        <activity
+            android:name=".dashboard.DashboardActivity"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
