--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
 }
-def supportVersion = "24.1.1"
+def supportVersion = "24.2.1"
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
@@ -43,9 +43,15 @@ dependencies {
     compile 'com.squareup.dagger:dagger:1.2.1'
     compile 'com.squareup.dagger:dagger-compiler:1.2.1'
     compile 'com.jakewharton:butterknife:7.0.1'
+//    kapt 'com.jakewharton:butterknife:7.0.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile project(path: ':servicelayer')
     testCompile 'org.mockito:mockito-core:1.10.19'
+}
+
+//ButterKnife For Kotlin
+kapt {
+    generateStubs = true
 }
 repositories {
     mavenCentral()
