--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 24
@@ -40,10 +41,16 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
     compile 'com.squareup.dagger:dagger:1.2.1'
-    compile 'com.squareup.dagger:dagger-compiler:1.2.1'
-    compile 'com.jakewharton:butterknife:7.0.1'
-//    kapt 'com.jakewharton:butterknife:7.0.1'
+    apt 'com.squareup.dagger:dagger-compiler:1.2.1'
+    kapt 'com.squareup.dagger:dagger-compiler:1.2.1'
+
+    compile 'com.jakewharton:butterknife:8.0.1'
+    kapt 'com.jakewharton:butterknife-compiler:8.0.1'
+    apt 'com.jakewharton:butterknife-compiler:8.0.1'
+
+
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile project(path: ':servicelayer')
     testCompile 'org.mockito:mockito-core:1.10.19'
