--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,10 +24,10 @@
             android:theme="@style/AppTheme" />
         <activity
             android:name=".coffeebag.CompanyActivity"
-            android:theme="@style/AppTheme"/>
+            android:theme="@style/AppTheme" />
         <activity
-            android:theme="@style/AppTheme"
-            android:name=".checkins.CheckInSummaryActivity" />
+            android:name=".checkins.CheckInSummaryActivity"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".dashboard.DashboardActivity"
             android:theme="@style/AppTheme">
@@ -39,6 +39,9 @@
         </activity>
         <activity
             android:name=".checkins.AddCheckInActivity"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".checkins.CheckInDetailActivity"
             android:theme="@style/AppTheme"/>
     </application>
 
